--- a/src/index.css
+++ b/src/index.css
@@ -18,18 +18,18 @@ body {
 }
 
 *::-webkit-scrollbar {
-    width: 4px;
-    height: 4px;
+    width: 0.4vw;
+    height: 0.4vw;
 }
 
 *::-webkit-scrollbar-track {
     background-color: #d9d9d980;
-    width: 4px;
-    height: 4px;
+    width: 0.4vw;
+    height: 0.4vw;
 }
 
 *::-webkit-scrollbar-thumb {
     background-color: #555;
-    width: 4px;
-    height: 4px;
+    width: 0.4vw;
+    height: 0.4vw;
 }
