--- a/src/features/character/Character.scss
+++ b/src/features/character/Character.scss
@@ -20,6 +20,7 @@
         .character-casting {
             flex: 1;
             color: black;
+            line-height: $unit * 24;
         }
     }
 
@@ -37,7 +38,9 @@
             }
 
             .character-resource-value {
-                flex: 1
+                padding-left: $unit * 4;
+                flex: 1;
+                line-height: $unit * 24;
             }
         }
     }
