opt progress bar add resource regeneration implement cost

--- a/src/features/battle/Battle.scss
+++ b/src/features/battle/Battle.scss
@@ -11,4 +11,12 @@
         width: $unit * 1000;
         height: $unit * 600;
     }
+
+    .battle-statistics {
+        position: absolute;
+        top: 60%;
+        left: $unit * 60;
+        width: $unit * 300;
+        height: $unit * 600;
+    }
 }
