--- a/src/components/ProgressBar/ProgressBar.scss
+++ b/src/components/ProgressBar/ProgressBar.scss
@@ -1,6 +1,35 @@
 @import 'src/styles/shared.scss';
 
-.progress-bar {
+.progress-bar-outer {
     border-width: $unit;
     position: relative;
+    box-sizing: content-box;
+    min-height: $unit * 22;
+
+    .text-outer {
+        position: absolute;
+        left: $unit * 5;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 1;
+        white-space: nowrap;
+    }
+
+    .progress-bar-inner {
+        z-index: 2;
+        height: calc(100% + #{$unit} * 2);
+        border-width: $unit;
+        position: absolute;
+        left: -$unit;
+        top: -$unit;
+        overflow: hidden;
+
+        .text-inner {
+            position: absolute;
+            left: $unit * 5;
+            top: 50%;
+            transform: translateY(-50%);
+            white-space: nowrap;
+        }
+    }
 }
