--- a/src/features/enemies/Enemies.scss
+++ b/src/features/enemies/Enemies.scss
@@ -21,8 +21,10 @@
             display: flex;
             align-items: center;
             width: 100%;
-            height: 5.6%;
-            border: $unit * 1 solid red;
+            height: 4%;
+            min-height: 0;
+            line-height: 4%;
+            border: $unit * 1 solid rgb(182, 52, 5);
             font-size: $unit * 20;
             padding-left: $unit * 6;
         }
@@ -45,7 +47,7 @@
         }
 
         .left-top-corner {
-            top: 8%;
+            top: 6%;
             left: 0;
             border-left: $unit * 1;
             border-top: $unit * 1;
@@ -59,7 +61,7 @@
         }
 
         .right-top-corner {
-            top: 8%;
+            top: 6%;
             right: 0;
             border-right: $unit * 1;
             border-top: $unit * 1;
