--- a/src/features/battle/Battle.scss
+++ b/src/features/battle/Battle.scss
@@ -14,10 +14,10 @@
 
     .battle-statistics {
         position: absolute;
-        top: 60%;
+        top: 44%;
         left: $unit * 60;
         width: $unit * 300;
-        height: $unit * 600;
+        height: 26vh;
     }
 
     .battle-messages-wrapper {
