--- a/src/features/enemies/Enemies.scss
+++ b/src/features/enemies/Enemies.scss
@@ -21,12 +21,11 @@
             display: flex;
             align-items: center;
             width: 100%;
-            height: 4%;
+            height: 2vh;
             min-height: 0;
-            line-height: 4%;
+            line-height: 2vh;
             border: $unit * 1 solid rgb(182, 52, 5);
             font-size: $unit * 20;
-            padding-left: $unit * 6;
         }
 
         .name {
