--- a/src/features/enemies/Enemies.scss
+++ b/src/features/enemies/Enemies.scss
@@ -46,7 +46,7 @@
         }
 
         .left-top-corner {
-            top: 6%;
+            top: 2.6vh;
             left: 0;
             border-left: $unit * 1;
             border-top: $unit * 1;
@@ -60,7 +60,7 @@
         }
 
         .right-top-corner {
-            top: 6%;
+            top: 2.6vh;
             right: 0;
             border-right: $unit * 1;
             border-top: $unit * 1;
