--- a/src/features/enemies/Enemies.scss
+++ b/src/features/enemies/Enemies.scss
@@ -30,10 +30,17 @@
 
         .name {
             position: absolute;
-            top: 50%;
-            left: 50%;
+            top: 20%;
+            left: 30%;
             transform: translate(-50%, -50%);
             font-size: $unit * 42;
+        }
+
+        .enemy-effects {
+            position: absolute;
+            bottom: 2%;
+            left: 2%;
+            width: 40%;
         }
 
         .corner {
