--- a/src/features/layout/Layout.scss
+++ b/src/features/layout/Layout.scss
@@ -17,6 +17,7 @@
         position: absolute;
         bottom: $paddingToScreen;
         left: $paddingToScreen;
+        width: $unit * 400;
     }
 
     .layout-logs {
